--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -560,10 +560,10 @@ we rather developed a very simple lightweight vocabulary,
 consisting of only three classes, three object properties, and three data properties, 
 which is universal enough to describe constraints of any constraint type.
 We call this vocabulary the \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}} whose conceptual model is shown in Figure \ref{fig:RDF-CV-conceptual-model}.
-\begin{figure}
+\begin{figure}[H]
 	\centering
 		\includegraphics[width=0.60\textwidth]{images/RDF-CV-conceptual-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - Conceptual Model}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Conceptual Model}
 	\label{fig:RDF-CV-conceptual-model}
 \end{figure}
 
@@ -615,14 +615,14 @@ Altogether, instances of the most of the constraint types are \emph{simple const
 
 \subsection{\emph{Simple Constraints}}
 
-The implementation model of the \emph{RDF-CV} (see Figure \ref{fig:RDF-CV-implementation-model}) shows that
+The implementation model of the \emph{RDF-CV} (Figure \ref{fig:RDF-CV-implementation-model}) shows that
 both \emph{property constraints} and \emph{class constraints} are \emph{simple constraints}. 
 %For both \emph{property} and \emph{class constraints} a \emph{context class}, a list of \emph{classes}, the \emph{constraining element}, and the \emph{constraining value} can be stated. 
 %Lists of \emph{left} and \emph{right properties} can only be specified for \emph{property constraints}.
-\begin{figure}
+\begin{figure}[H]
 	\centering
-		\includegraphics[width=0.60\textwidth]{images/RDF-CV-implementation-model.png}
-	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} - Implementation Model}
+		\includegraphics[width=0.80\textwidth]{images/RDF-CV-implementation-model.png}
+	\caption{\emph{RDF Constraints Vocabulary (RDF-CV)} Implementation Model}
 	\label{fig:RDF-CV-implementation-model}
 \end{figure}
 A \emph{simple constraint} holds for all individuals of their \emph{context class}.
@@ -630,24 +630,24 @@ The \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sq
 which restricts \emph{publications} to have at least one \emph{author} which must be a \emph{person},
 is an example of a \emph{property constraint} on \emph{author}
 which holds for all individuals of the class \emph{Publication}.
-Table \ref{tab:property-constraint-cardinality-restriction} displays the mapping to the \emph{RDF-CV}:
+Table \ref{tab:property-constraint-cardinality-restriction} displays the mapping to the \emph{RDF-CV}.
 \begin{table}[H]
   \scriptsize
   \sffamily
   \vspace{0cm}
-	\caption{Property Constraint - Minimum Qualified Cardinality Restriction}
+	\caption{Minimum Qualified Cardinality Restriction as Property Constraint}
 	\label{tab:property-constraint-cardinality-restriction}
 	\centering
-		\begin{tabular}{l|l|l|l|l|l|l}
-      \textbf{c. set} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
+		\begin{tabular}{c|c|c|c|c|c|c}
+      \textbf{constraint set} & \textbf{context class} & \textbf{left property list} & \textbf{right p. list} & \textbf{classes} & \textbf{constraining element} & \textbf{c. value} \\
       \hline
       property & Publication & author & - & Person & $\geq$ & 1 \\
 		\end{tabular}
 \end{table}
 
-The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types which cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets).
-In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}.
-\emph{Simple constraints} may also refer to a list of \emph{classes}.
+The \emph{constraining element} indicates the actual type of constraint like \emph{DL} concept and role constructors, (in)equality, and further keywords for constraint types whose constraints cannot be expressed in \emph{DL} (e.g., regular expressions and constraining facets).
+In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the \emph{constraining element}
+and \emph{simple constraints} may refer to a list of \emph{classes}.
 The \emph{constraining element} of the \emph{property constraint} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g.,  is the \emph{DL at-least restriction} \emph{$\geq$}, the \emph{constraining value} is \emph{1}, and
 the list of \emph{classes} includes \emph{Person} which restricts the objects of the property \emph{author} to be of the class \emph{Person}.
 For \emph{property constraints}, \emph{left} and \emph{right property lists} are specified.
@@ -662,14 +662,14 @@ whose \emph{genre} is \emph{Popular-Science},
 %{\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
 the \emph{object property path} {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an \emph{author} of the \emph{genre} \emph{Popular-Science}. 
 %{\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science))}.}
-Thus, when mapped to the \emph{RDF-CV} (Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
-and the property \emph{authorOfGenre} is on the right side.
-As this \emph{property constraint} holds all individuals, the \emph{context class} is the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
+Thus, when mapped to the \emph{RDF-CV} (Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the \emph{constraining element} \emph{$\sqsubseteq$}
+and the property \emph{authorOfGenre} on the right side.
+As this \emph{property constraint} holds for all individuals within the data, the \emph{context class} is the \emph{DL top concept} $\top$ which stands for the super-class of all classes.
 \begin{table}[H]
   \scriptsize
   \sffamily
   \vspace{0cm}
-	\caption{Property Constraint - Object Property Paths}
+	\caption{Object Property Paths as Property Constraint}
 	\label{tab:property-constraint-object-property-paths}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
@@ -715,8 +715,8 @@ how the \emph{literal pattern matching} \emph{simple constraint} which is not ex
 how the \emph{universal restriction} \emph{complex constraint} which is expressible in \emph{DL} are mapped to the \emph{RDF-CV}.
 Thereby, the \emph{context class} \emph{ISBN}, whose instances must satisfy the \emph{simple constraint}, 
 is reused within the list of \emph{classes} the \emph{complex constraint} refers to.
-The \emph{literal pattern matching} constraint type introduces the new \emph{constraining element} \emph{regex}.
-The validation of each \emph{constraining element}, so for \emph{regex}, has to be implemented only once.
+The \emph{literal pattern matching} constraint type introduces the \emph{constraining element} \emph{regex}
+whose validation has to be implemented once like for any other \emph{constraining element}.
 %In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in \emph{DL}. 
 %\begin{gcotable}
 %property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
@@ -726,7 +726,7 @@ The validation of each \emph{constraining element}, so for \emph{regex}, has to 
   \scriptsize
   \sffamily
   \vspace{0cm}
-	\caption{Simple Constraint (Not Expressible in DL)}
+	\caption{Simple Constraints which are not Expressible in DL)}
 	\label{tab:simple-constraint-not-expressible-in-dl)}
 	\centering
 		\begin{tabular}{l|l|l|l|l|l|l}
@@ -740,12 +740,13 @@ The validation of each \emph{constraining element}, so for \emph{regex}, has to 
 \subsection{\emph{Complex Constraints}}
 
 %\emph{Complex constraints} are composed out of \emph{simple constraints} and/or \emph{complex constraints}.
-\emph{Context-specific exclusive or of property groups} (\emph{R-13}) \emph{complex constraints}
+\emph{Complex constraints} of the constraint type \emph{context-specific exclusive or of property groups} (\emph{R-13}) 
 restrict individuals of given classes to have all properties of exactly one of multiple mutually exclusive property groups.
 \emph{Publications}, e.g., are either identified by an \emph{ISBN} and a \emph{title} (for books) or by an \emph{ISSN} and a \emph{title} (for periodical \emph{publications}), but it should not be possible to assign both identifiers to a given \emph{publication}. 
-As the \emph{The-Great-Gatsby} is a \emph{publication} with an \emph{ISBN} and a \emph{title} without an \emph{ISSN}, 
+As \emph{The-Great-Gatsby} is a \emph{publication} with an \emph{ISBN} and a \emph{title} without an \emph{ISSN}, 
 \emph{The-Great-Gatsby} is considered as a valid \emph{publication}.
-This \emph{complex constraint} is expressible specifically by \emph{ShEx} and generically by \emph{DL} (and can therefore be mapped to the \emph{RDF-CV} \cite{BoschEckert2015-2}):
+The \emph{complex constraint} is generically expressible by \emph{DL}:
+%This \emph{complex constraint} is expressible specifically by \emph{ShEx} and generically by \emph{DL} (and can therefore be mapped to the \emph{RDF-CV} \cite{BoschEckert2015-2}).
 
 %Half-Klingons, e.g., either have a klingon mother and a human father or a human mother and a klingon father, which can be expressed by ShEx:
 
@@ -755,9 +756,9 @@ This \emph{complex constraint} is expressible specifically by \emph{ShEx} and ge
     %( humanMother Human , klingonFather Klingon ) }
 %\end{ex}
 
-\begin{ex}[commandchars=\\\{\}]
-\textit{ShEx:} Publication { ( isbn string , title string ) | ( issn string , title string ) }
-\end{ex}
+%\begin{ex}[commandchars=\\\{\}]
+%\textit{ShEx:} Publication { ( isbn string , title string ) | ( issn string , title string ) }
+%\end{ex}
 
 %As \ms{B'Elanna Torres} is a \ms{Half-Klingon} with a klingon mother and a human father, the following data is valid:
 
@@ -847,7 +848,7 @@ C $\sqsubseteq$ $\geq$ 1 issn.string $\sqcap$ $\leq$ 1 issn.string , D $\sqsubse
 The \emph{DL} statements demonstrate that the \emph{complex constraint} 
 is composed of many other \emph{complex} (e.g. \emph{minimum and maximum qualified cardinality restrictions}) and \emph{simple constraints} (e.g. constraints on sets).
 As \emph{exact (un)qualified cardinality restrictions (=n)} and \emph{exclusive or (XOR)} are frequently used \emph{complex constraints},
-we propose using them in terms of syntactic sugar as \emph{simple constraints}.
+we propose to simplify them as \emph{simple constraints} in terms of syntactic sugar.
 As a consequence, the \emph{context-specific exclusive or of property groups} \emph{complex constraint} is represented as a \emph{generic constraint} by means of the \emph{RDF-CV} more intuitively and concisely (Table \ref{tab:simplified-complex-constraints}).
 
 %\begin{gcotable}
@@ -880,7 +881,7 @@ property & D & title & - & string & = & 1 \\
 		\end{tabular}
 \end{table}
 
-\emph{Complex constraints} can be simplified and therefore formulated as \emph{simple constraints} when using them in terms of syntactic sugar.
+%\emph{Complex constraints} can be simplified and therefore formulated as \emph{simple constraints} when using them in terms of syntactic sugar.
 %There are three forms of \emph{OWL RBox axioms}: \emph{role inclusions}, \emph{equivalence} and \emph{disjointness}. 
 %\emph{OWL} provides a variety of other axiom types: \emph{role transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity}. 
 %These axiom types are sometimes considered as basic axiom types in \emph{DL} - using some suggestive notation such as
@@ -940,7 +941,7 @@ property & D & title & - & string & = & 1 \\
 %\end{table}
 The \emph{primary key properties} constraint type (\emph{R-226}) is often useful to declare a given (datatype) property as the primary key of a class, so that a system can enforce uniqueness. 
 \emph{Books}, e.g., are uniquely identified by their \emph{ISBN}, i.e., the property \emph{isbn} is inverse functional \ms{$(\ms{funct } isbn\sp{\overline{\ }})$}
-which can be represented using the \emph{RDF-CV} in form of a \emph{complex constraint} consisting of two \emph{simple constraints} (Table \ref{tab:primary-key-properties-as-complex-constraints}):
+which can be represented using the \emph{RDF-CV} in form of a \emph{complex constraint} consisting of two \emph{simple constraints} (Table \ref{tab:primary-key-properties-as-complex-constraints}).
 
 %\begin{gcotable}
 %property & $\top$ & commandAuthorizationCode$^{-}$ & commandAuthorizationCode$^{-}$ & - & inverse & - \\
@@ -967,7 +968,7 @@ A key can be a datatype, an object property, or a chain of properties.
 For these generalization purposes, as there are different sorts of keys, and as keys can lead to undecidability, 
 \emph{DL} is extended with a special construct \emph{keyfor} \cite{Lutz2005}.
 When using \emph{keyfor} (\ms{isbn keyfor Book}), 
-the \emph{complex constraint} can be simplified as a \emph{simple constraint} which looks like the following in RDF turtle syntax:
+the \emph{complex constraint} can be formulated as a \emph{simple constraint} which looks like the following in concrete RDF turtle syntax:
 
 %\begin{gcotable}
 %property & StarFleetOfficer & commandAuthorizationCode & - & - & keyfor & - \\
@@ -995,7 +996,8 @@ the \emph{complex constraint} can be simplified as a \emph{simple constraint} wh
 \emph{Complex constraints} of frequently used constraint types corresponding to \emph{DL} axioms like 
 \emph{transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity}
 can also be simplified in the same way, 
-as such axioms can be expressed using the basic features of \emph{DL} but can also be abbreviated when using them in form of syntactic sugar \cite{BoschEckert2015-2}
+as, although, such axioms can be expressed using basic \emph{DL} features, 
+\emph{DL} axioms like \emph{transitivity} can also be used in terms of syntactic sugar \cite{BoschEckert2015-2}.
 %Starfleet officers, e.g., are uniquely identified by their command authorization code (e.g. to activate and cancel auto-destruct sequences).
 %It means that the property \emph{commandAuthorizationCode} is inverse functional - mapped to DL and the \emph{RDF-CV} as follows:
 %
